# normalc

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/collections/: .map.c.swp  array.c  array.h  linked_list.c  linked_list.h  map.c  map.h  vector.c  vector.h
src/collections/map/: entry.c  entry.h  entry_set.c  entry_set.h
src/error/: error.c  error.h
src/memory/: memory.h
src/path/: io.c  io.h  path.c  path.h
src/random/: random.c  random.h
src/safety/: option.h
src/string/: string.c  string.h  string_builder.c  string_builder.h
test/: .test_map.c.swp  file.txt  test.sh  test_array.c  test_io.c  test_linked_list.c  test_map.c  test_map_stl.cpp  test_option.c  test_path.c  test_random.c  test_string.c  test_vector.c
